Changed the z-index of the buger navigation

--- a/public_html/styles/scss/stylesheet.scss
+++ b/public_html/styles/scss/stylesheet.scss
@@ -87,6 +87,7 @@ header{
             background: var(--accent-color);
             transition: ease-in-out all 850ms;
             transform: translateX(100%);
+            z-index: 10;
     
             ul{
                 gap: 14px;
